--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "0.0.0",
-  "keywords": [],
+  "version": "1.0.0",
+  "keywords": ["Strapi", "Strapi 5", "Plugin", "Preview Button", "Before Build"],
   "type": "commonjs",
   "exports": {
     "./package.json": "./package.json",
